--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
---upgrade pip
---upgrade setuptools
---upgrade wheel
 fastapi
 uvicorn[standard]
 jinja2
-python-multipart
-PyMuPDF==1.23.5
 httpx
+PyMuPDF
+
 
 
 
